analyzer/tests/snapshots/errors__continue_without_loop.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `continue` outside of a loop
  ┌─ [snippet]:3:3
  │
3 │   continue
  │   ^^^^^^^^ cannot `continue` outside of a `for` or `while` loop


